# OpenYaPlayer

./: CMakeLists.txt  README.md  qml.qrc
src/: main.cpp
src/api/src/: Network.cpp  Network.hpp
src/ui/include/ui/: MainForm.hpp
src/ui/src/: MainForm.cpp
ui/: main.qml
ui/components/: DefaultButton.qml  colors.js
